2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytag.el (tinytag-:output-buffer): Fix defcustom.

	* tiny/tinyperl.el (tinyperl-pause-upload-via-ftp): Use
	`insert-file-contents'.
	(tinyperl-perldoc): Fix variable `cmd' and format.
	(tinyperl-pod-by-module): Replace `pathname' with path.
	Was error: 'unused variable path'.
	(tinyperl-verbose-macro): Update to modern backquote.
	(tinyperl-directory-files): Update to modern backquote.
	(tinyperl-executable-set): Update to modern backquote.
	(tinyperl-version-macro): Update to modern backquote.
	(tinyperl-podchecker): Use `compilation-start'.

	* tiny/tinypad.el (ti::macrof-minor-mode-wizard): Replace
	`find-file-hooks' with (ti::compath-find-file-hook).

	* tiny/tinygnus.el (tinygnus-uff-summary-date): Use
	`string-to-number'.
	(autoload time-stamp-string): new.
	(tinygnus-set-group): Update to modern backquote.
	(tinygnus-summary-map-articles-macro): Update to modern backquote.
	(tinygnus-summary-map-article-body-macro): Update to modern backquote.
	(tinygnus-output-buffer-macro): Update to modern backquote.
	(tinygnus-files-from-dir-macro): Update to modern backquote.
	(tinygnus-summary-map-line-macro): Update to modern backquote.
	(tinygnus-debug-gnus-macro): Update to modern backquote.

	* tiny/tinydired.el (autoload dired-read-shell-command): New.

	* tiny/tinylisp.el (tinylisp-read-word): Correct args to
	in call `ti::buffer-match'.
	(tinylisp-occur-select-forward): Use `string-to-number'.
	(tinylisp-elp-results): Use `insert-buffer-substring'.
	(tinylisp-require): Update to modern backquote.
	(tinylisp-with-current-buffer): Update to modern backquote.
	(tinylisp-symbol-do-macro): Update to modern backquote.
	(tinylisp-record-macro): Update to modern backquote.
	(tinylisp-defun-macro): Update to modern backquote.
	(tinylisp-defun-sym-macro): Update to modern backquote.
	(tinylisp-defcustom-macro): Update to modern backquote.
	(defadvice defconst): Update to modern backquote.